player style components

--- a/meteorProjects/score-keep/imports/client/styles/_main.scss
+++ b/meteorProjects/score-keep/imports/client/styles/_main.scss
@@ -15,6 +15,10 @@ body {
   font-size: 1.6rem;
 }
 
+input, button, select {
+  font-size: 1.3rem;
+}
+
 h1{
   font-weight: 300;
   font-size: 2.4rem;
@@ -29,3 +33,5 @@ h2{
 @import './components/wrapper';
 @import './components/item';
 @import './components/button';
+@import './components/form';
+@import './components/player';
