Ranking algorithm in JavaScript for styling the first three places of the board

--- a/meteorProjects/score-keep/imports/client/styles/components/_item.scss
+++ b/meteorProjects/score-keep/imports/client/styles/components/_item.scss
@@ -7,6 +7,18 @@
 
 //BEM - Block, Element, Modifier
 
+.item--position-1{
+  background: #42d7f4;
+}
+
+.item--position-2{
+  background: #a2f9cb;
+}
+
+.item--position-3{
+  background: #f9d1e1;
+}
+
 .item__message {
   font-size: 1.3rem;
   font-style: italic;
