--- a/reactProjects/indesicionApp/src/styles/components/_button.scss
+++ b/reactProjects/indesicionApp/src/styles/components/_button.scss
@@ -5,13 +5,19 @@
     color: white;
     font-weight: bold;
     font-size: $l-size;
-    margin-bottom: $xl-size;
+    margin-bottom: $m-size;
     padding:2.4rem;
     width: 100%;
 }
 
 .big-button:disabled{
     opacity: .5;
+}
+
+@media (min-width: $desktop-brakepoint){
+    .big-button{
+        margin-bottom: $xl-size;
+    }
 }
 
 //Button
@@ -31,3 +37,5 @@
     padding: 0;
 }
 //bem
+
+
